tests/rename/should_fail/PackageImportsDisabled.hs
module PackageImportsDisabled where

import "base" Data.Char
