tests/rename/should_fail/PackageImportsDisabled.stderr

PackageImportsDisabled.hs:3:1: error: [GHC-10032]
    Package-qualified imports are not enabled
    Suggested fix:
      Perhaps you intended to use the ‘PackageImports’ extension
